Fix header z-index

--- a/themes/base-hugo-theme/assets/scss/seda-custom.scss
+++ b/themes/base-hugo-theme/assets/scss/seda-custom.scss
@@ -228,7 +228,7 @@ nav.navbar-light {
   transition: background-color .2s ease;
   padding-right: 0;
   padding-left: 0;
-  z-index: 2;
+  z-index: 3;
   // opacity: 0;
 
   .navbar-brand {
